tests/sksl/errors/golden/RedeclareStruct.glsl
### Compilation failed:

error: 1: expected an identifier, but found type 'void'
1 error
